# gene-set-analysis

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
gene_set_calc/: test_matrix.py
python/gene_set_calc/: __init__.py  requirements.txt  run_analysis.py  test_matrix.py
src/: lib.rs
