[package]
name = "gene_set_calc"
version = "0.1.0"
edition = "2021"

[lib]
name = "gene_set_calc"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "*"
ndarray = "*"
numpy = "*"
anyhow = "*"
flate2 = "*"
sprs = "*"

[dependencies.pyo3]
version = "0.17.3"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
features = ["extension-module", "abi3-py37"]

